# fin3

./: .gitignore  AGENTS.md  PLAN.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: DESIGN.md  ROADMAP.md  USAGE.md  dataset-comparison.md  index.md  resource-monitoring-notes.md
docs/api/: calendar.md  config.md  core.md  exceptions.md  index.md  inspect.md  metadata.md  monitoring.md  providers.md  schemas.md  storage.md  utilities.md  validation.md
docs/databento/: api-reference-historical-basics-authentication.md  api-reference-historical-basics-compression.md  api-reference-historical-basics-datasets.md  api-reference-historical-basics-dates-and-times.md  api-reference-historical-basics-encodings.md  api-reference-historical-basics-errors.md  api-reference-historical-basics-metered-pricing.md  api-reference-historical-basics-overview.md  api-reference-historical-basics-rate-limits.md  api-reference-historical-basics-schemas-and-conventions.md  api-reference-historical-basics-size-limits.md  api-reference-historical-basics-symbology.md  api-reference-historical-basics-versioning.md  api-reference-historical-batch-batch-download.md  api-reference-historical-batch-batch-submit-job.md  api-reference-historical-client-historical.md  api-reference-historical-helpers-dbn-store-to-df.md  api-reference-historical-helpers-dbn-store-to-file.md  api-reference-historical-helpers-dbn-store-to-parquet.md  api-reference-historical-helpers-dbn-store.md  api-reference-historical-helpers-request-full-definitions.md  api-reference-historical-helpers-request-symbology.md  (+35 more)
fin3/: __init__.py  core.py  exceptions.py  inspect.py  schemas.py
fin3/providers/: base.py  (+6 more)
scripts/: audit_library.py  defragment_library.py  download_symbols.py  fix_meta_rename.py  inspect_library.py  normalize_databento.py  scrape_arcticdb.py  scrape_databento.py
tests/: conftest.py  test_calendar.py  test_config.py  test_core.py  test_core_helpers.py  test_defrag.py  test_exceptions.py  test_gap_detection.py  test_inspect.py  test_integrity.py  test_locking.py  test_metadata.py  test_monitoring.py  test_providers.py  test_schemas.py  test_storage.py  test_validation.py
(+29 files in other folders)
