[project]
name = "fin3"
version = "0.1.0"
description = "Declarative financial time-series data library for VectorBT Pro backtesting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arcticdb>=5.0",
    "exchange-calendars>=4.13.2",
    "pandas>=2.0",
    "psutil>=5.9",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
databento = ["databento"]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
    "pandas-stubs>=3.0.0.260204",
    "pymdown-extensions>=11.0",
    "types-pytz>=2026.2.0.20260518",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require real infrastructure (Databento API key, MinIO)",
]

[tool.mypy]
ignore_missing_imports = true
strict = true
